Enhance resume functionality by updating data fetching paths, integrating Python setup in CI, and adding AI capabilities for user interaction; remove outdated JSON files for applications, experience, and skills.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+      - name: Update agenda from ICS
+        run: python3 scripts/update_agenda.py
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
