Refactor deployment workflows to publish the root directory instead of the resume directory; remove unnecessary references to the resume directory in static.yml and deploy.yml. Delete obsolete resume files and directories to streamline the project structure.

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,8 +42,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload only the resume directory
-          path: 'resume'
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
