--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 ### Intellij template
 
-./.idea
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+/.idea/
